--- a/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/index.html
+++ b/SkillGapUI/angular-workspace/projects/skill-gap-analysis/src/index.html
@@ -11,5 +11,6 @@
   <app-employee-dashboard></app-employee-dashboard>
   <app-home></app-home>
   <app-root></app-root>
+  <app-whoareyou></app-whoareyou>
 </body>
 </html>
